[package]
name = "azure_service_bus"
version = "0.1.0"
authors = ["Peter Glotfelty <glotfelty.2@osu.edu, Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

[dependencies]
time = "0.2"
rust-crypto = "0.2"
url = "2"
percent-encoding = "2"
hyper = { version = "0.14", features = ["client"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.13"
eyre = "0.6"

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
